# meta-openenv-hackathon

./: Dockerfile  README.md  app.py  environment.py  food_data.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
env/: models.py
graders/: task_graders.py
server/: app.py
